--- a/matisse/build.gradle
+++ b/matisse/build.gradle
@@ -18,8 +18,8 @@ apply plugin: 'com.novoda.bintray-release'
 apply plugin: 'checkstyle'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.0"
 
     defaultConfig {
         minSdkVersion 14
@@ -47,6 +47,9 @@ dependencies {
 
     compileOnly 'com.github.bumptech.glide:glide:3.7.0'
     compileOnly 'com.squareup.picasso:picasso:2.5.2'
+
+    implementation 'eu.davidea:flexible-adapter:5.0.0-rc3'
+
 }
 
 // jcenter configuration for novoda's bintray-release
