添加提交maven代码，添加是否可以拖拽的标识，修改选中顺序和底部拖动顺序一致

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven {
+            url 'http://43.241.209.158:15004/repository/maven-releases/'
+        }
     }
 }
 
