--- a/matisse/gradle.properties
+++ b/matisse/gradle.properties
@@ -3,7 +3,7 @@ MAVEN_REPO_RELEASE_URL=http://43.241.209.158:15004/repository/maven-releases/
 MAVEN_REPO_SNAPSHOT_URL=http://43.241.209.158:15004/repository/maven-snapshots/
 
 #对应maven的GroupId的值
-GROUP = cn.qingchengfit.photoselecter
+GROUP = cn.qingchengfit.imagepicker
 #登录nexus ossde的用户名
 
 NEXUS_USERNAME=hbl
@@ -12,10 +12,10 @@ NEXUS_USERNAME=hbl
 NEXUS_PASSWORD=huangbaole
 
 # groupid
-GROUP_ID = matisse
+GROUP_ID = cn.qingchengfit.imagepicker
 
 # type
 TYPE = aar
 
 # description
-DESCRIPTION = this is photo selecter lib
+DESCRIPTION = this is image picker lib
