--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -38,7 +38,7 @@ android {
 ext.supportLibVersion = '26.1.0'
 
 dependencies {
-    implementation project(':matisse')
+//    implementation project(':matisse')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation "com.android.support:appcompat-v7:${supportLibVersion}"
@@ -47,6 +47,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.0.5'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+
+    implementation "cn.qingchengfit.imagepicker:matisse:1.0.0"
 
 
 }
